# Squirrel

./: CMakeLists.txt  README.md
include/: base64.h  errors.h  files.h  flags.h  gui.h  json.h  network.h  renderer.h  safe_queue.hpp  service.h  sprocess.h  thread_queue.h
src/: base64.cpp  errors.cpp  files.cpp  files_mac.mm  flags.cpp  gui.cpp  json.cpp  main.cpp  network.cpp  renderer.cpp  service.cpp  sprocess.cpp  sprocess_mac.mm  thread_queue.cpp
